--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
-
 [build]
   publish = "public"
-  command = "hugo"
-
-
-[build.environment]
-  HUGO_VERSION = "0.128.0"
+  command = "hugo --gc --minify"
+[context.production.environment]
+  HUGO_VERSION = "0.128.0" 
+  HUGO_ENV = "production"
+  HUGO_ENABLEGITINFO = "true"
