--- a/hugo.yaml
+++ b/hugo.yaml
@@ -172,3 +172,7 @@ markup:
     style: dracula
     lineNos: false
     noClasses: false
+
+imaging:
+  resample_filter = "lanczos"
+  color_space = "ProPhoto"
