--- a/themes/PaperModX/exampleSite/config.profileMode.yml
+++ b/themes/PaperModX/exampleSite/config.profileMode.yml
@@ -19,7 +19,7 @@ params:
     - Reorx
   mainSections:
     - docs
-    - posts
+    - stories
   disableAnchoredHeadings: true
   images: ["cover.png"]
   DateFormat: "2006-01-02"
